Check if comments are filled in by a bot by including a field that is not visible to regular users; also fix error when a submitted comment is marked as junk

--- a/public/stylesheets/sass/_badass-content.sass
+++ b/public/stylesheets/sass/_badass-content.sass
@@ -208,3 +208,6 @@ div.new-comment
       width: 600px
       height: 100px
       margin-bottom: 12px
+
+  .title
+    display: none
